# yahtsee

./: CMakeLists.txt
include/: utils.h
include/agents/: agent.h  bonuspriorityzing.h  greedy.h  learner.h  random.h  smartergreedy.h
include/arena/: arena.h  randomgenerator.h
include/logic/: enums.h  evaluator.h  filters.h  gamegraph.h  round.h  simulator.h
lsp/: compare_evals.py  cpp  greedy.lsp  greedy.py  lsp
src/: main.cpp
src/agents/: greedy.cpp  learner.cpp  pgreedy.cpp  smartergreedy.cpp
src/arena/: arena.cpp
src/logic/: evaluator.cpp  gamegraph.cpp  simulator.cpp
v0/: CMakeLists.txt
v0/include/: utils.h
v0/include/agents/: learner.h  pgreedy.h  smartgreedy.h
v0/include/arena/: arena.h
v0/include/logic/: enums.h  gamestate.h
v0/src/: main.cpp
v0/src/agents/: bonuspriorityzing.cpp  greedy.cpp  random.cpp  smartgreedy.cpp
v0/src/arena/: arena.cpp
v0/src/logic/: evaluator.cpp  gamegraph.cpp
v1/: CMakeLists.txt
v1/include/: arena.h  logic.h  utils.h
v1/include/agents/: agent.h  random.h
v1/src/: arena.cpp  logic.cpp  main.cpp
v1/src/agents/: random.cpp
v1/tests/: CMakeLists.txt  test_consistency.cpp  test_speed.cpp
